objects/SSH_Keypair__c.object
<CustomObject>
    <fields>
        <fullName>Passphrase__c</fullName>
        <description>A passphrase used to encrypt/decrypt SSH keys.</description>
        <inlineHelpText>A passphrase used to encrypt/decrypt SSH keys.</inlineHelpText>
        <label>Passphrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Key__c</fullName>
        <description>An encrypted SSH private key.</description>
        <inlineHelpText>An encrypted SSH private key.</inlineHelpText>
        <label>Private Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public_Key__c</fullName>
        <description>An encrypted SSH public key.</description>
        <inlineHelpText>An encrypted SSH public key.</inlineHelpText>
        <label>Public Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>SSH Keypair</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SSH Keypair Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSH Keypairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>